--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "description": "A web app to make highschool sports streaming possible",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/daahsedmonton/DAAHS-Sports-Streaming.git"
@@ -18,6 +17,7 @@
   },
   "homepage": "https://github.com/daahsedmonton/DAAHS-Sports-Streaming#readme",
   "dependencies": {
+    "bootstrap": "^5.3.1",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "socket.io": "^4.7.2"
